* Fixed song bpm and tpb being misreported to machines if they used FF or FE command
! VU Meters are all nicer
+ Look of Machine Wires can be changed in the visual dialog (pooplog)
! Many small Optimizations and improvements
+ Multiple Selections in the sequencer menu (ctrl or shift + left mouse button or drag) can be deleted, copied, 
  pasted, etc. [sue] (pooplog)

V1.66
-----
+ Added elapsed playtime (by KooPer)
+ Now loading songs with machines outside of the screen moves them to a visible area.
+ VST host correctly does "idle" calls to VST's now. This supposedly makes AbSynth work.
+ VST host now replies to "GetParameterQuantization". Some plugins use this to round correctly.
+ Added Patch to make VSTi sc-101 from SC developers work. (Not an awesome plugin anyway, and crashes)
+ New machine graphics thanks to /\/\ark.
+ Added four colour themes selectable via a comboox in configuration-settings, "visual" folder.
* Important change in the Song Loading routine to load better the VST Plugins.
  Also, now saves the program number, so VST's like "Triangle II", "Vivaldi" and "Ganymed" work!
  New Files wont load VST's in previous versions of Psycle. It's sort of a security for newer files.
* Changed the sequencer a bit:
  Now only shows the patterns within the sequence length. (Following a request made some time ago)
  Added "add 10" and "dec 10" to pattern position (This will make some happy too)
  Now Insert inserts after the current position (previously, it was before).
  "Next Pattern" keyboard key now auto inserts new pattern when reaching the end.
  Removed "setLen", since now it is a bit useless.
  Removed "Spread" and replaced by "Sort patterns".
* Changed Wav loading routines to use RIFF loader. This allows to see SoundForge's loops settings.
* Pattern editor now hides the "0000" value in effects column (when it is not used as twk or mcm)
* Cleaned up a bit the Instrument editor Dialog (No new functionality yet) and fixed little errors