@@ -751,10 +751,10 @@ BEGIN
 END
 
 IDD_MASTERDLG DIALOGEX 0, 0, 268, 39
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Master"
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_BOTH | 
                     TBS_NOTICKS | WS_TABSTOP,4,4,256,16,WS_EX_STATICEDGE
@@ -2242,14 +2242,14 @@ END
 
 STRINGTABLE DISCARDABLE 
 BEGIN
-	ID_INDICATOR_SEQPOS		"Pos:00"
-	ID_INDICATOR_PATTERN	"Pat:00"
-	ID_INDICATOR_LINE		"Line:000"
-	ID_INDICATOR_TIME		"00:00:00.00"
-    ID_INDICATOR_EDIT		"Edit"
-    ID_INDICATOR_FOLLOW		"Follow"
-    ID_INDICATOR_NOTEOFF	"NoteOffs"
-    ID_INDICATOR_TWEAKS		"Tweaks"
+    ID_INDICATOR_SEQPOS     "Pos:00"
+    ID_INDICATOR_PATTERN    "Pat:00"
+    ID_INDICATOR_LINE       "Line:000"
+    ID_INDICATOR_TIME       "00:00:00.00"
+    ID_INDICATOR_EDIT       "Edit"
+    ID_INDICATOR_FOLLOW     "Follow"
+    ID_INDICATOR_NOTEOFF    "NoteOffs"
+    ID_INDICATOR_TWEAKS     "Tweaks"
 END
 
 #endif    // English (U.S.) resources
